--- a/agarwood/templates/base.html
+++ b/agarwood/templates/base.html
@@ -127,7 +127,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
             </button>
-                <a class="navbar-brand" href="index.html"><img style="width: 4em;"  src="/static/assets/images/logosmall.png" class="logo" alt=""></a>
+                <a class="navbar-brand" href="/"><img style="width: 7em;"  src="/static/assets/images/logosmall.png" class="logo" alt=""></a>
             </div>
             <!-- End Header Navigation -->
 
